# para

./: .gitignore  Makefile  README.md  pyproject.toml
.bin/: build_index.py
.bin/templates/: root.md
para/: __init__.py  __main__.py  category.py  mixins.py  monitor.py  paths.py  random.py  render.py  runner.py  snippet.py
snippets/: project.ini
snippets/category/: about.md
templates/: category.md  macro.md  subcategory.md
