[tool.poetry]
name = "wiki"
version = "0.1.0"
description = "Para wiki scripts"
authors = ["Sergey Poryvaev <porivaevs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
isort = "^4.3"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
ipdb = "^0.12.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
